--- a/index.html
+++ b/index.html
@@ -4,22 +4,38 @@
 
   <title>Vuejs Template</title>
   <script src="https://unpkg.com/vue@next"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 
 <body>
 
+  <div id="app">
+
+    <button class="button" v-on:click="clearList">Clear the list</button>
+    <br><br>
+    <input v-model.number="userId" type="number" placeholder="User Id">
+    <button class="button" v-on:click="getByUserId(userId)">Get by UserId</button>
+    <br><br>
+    <button class="button" v-on:click="getAllPosts">Get all</button>
+
+
+    <div v-if="error" style="color: red">{{ error }}</div>
+    
+
+    <ul v-if="posts.length > 0">
+      <li v-for="post in posts" v-bind:key="post.id">
+        UserId {{ post.userId }} : {{ post.title }}
+      </li>
+    </ul>
+
+    <div v-else style="font-style: italic;">No posts to show</div>
+
+  </div>
 
 
 
-
-
-
-
-
-
-
-    <script src="./index.js"></script>
+    <script src="js/index.js"></script>
     <script>
         app.mount('#app')
     </script>
